# comp-562-final-project

./: .gitignore  README.md  baseline_logistic_regression.ipynb  baseline_model.keras  baseline_nn.ipynb  pickled_dataset.pkl  project.ipynb  pyproject.toml  setup.ipynb
src/: dataset.py
