[tool.poetry]
name = "comp-562-final-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
polars = "^1.12.0"
opencv-python = "^4.10.0.84"
polars-u64-idx = "^1.12.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
tqdm = "^4.67.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
